--- a/rootkit/Makefile
+++ b/rootkit/Makefile
@@ -1,4 +1,4 @@
-obj-m += rootkit-main.o
+obj-m += rootkit-main.h rootkit-main.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
